--- a/QuarantineHub/Views/_ViewImports.cshtml
+++ b/QuarantineHub/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using QuarantineHub
-@using QuarantineHub.Models
+﻿@using MVC
+@using MVC.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
